# llm-locust

./: .pre-commit-config.yaml  Dockerfile  README.md  api.py  clients.py  inputs.json  logging.conf  metrics.py  metrics_collector.py  prompt.py  pyproject.toml  user.py  user_spawner.py  utils.py
.github/workflows/: lint.yaml
webui/: README.md  auth.html  dev.html  index.html  package.json  report.html  vite.config.ts
webui/src/assets/: Logo.tsx
webui/src/components/Layout/Footer/: Footer.tsx
webui/src/components/LineChart/: LineChart.tsx  LineChart.types.ts  LineChart.utils.ts
webui/src/components/Reports/: Reports.tsx
webui/src/components/SwarmCharts/: SwarmCharts.tsx
webui/src/components/SwarmForm/: SwarmForm.tsx
webui/src/components/Tabs/: Tabs.constants.tsx
webui/src/hooks/: useFetchStats.ts
webui/src/pages/: HtmlReport.tsx
webui/src/redux/slice/: ui.slice.ts
webui/src/types/: swarm.types.ts  ui.types.ts
